# discoid-c

./: .gitignore  README.md  deps.toml
.github/workflows/: build_linux.yml
src/: CMakeLists.txt  run.sh
src/examples/: main.c
src/include/discoid/: circular_buffer.h
src/lib/: CMakeLists.txt  circular_buffer.c
